--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
+    "vue-lodash": "^2.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
